--- a/b_/html2pdf.html
+++ b/b_/html2pdf.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="content" style="display: none">
-        <h1>Hello, World!</h1>
+        <h1 style="color:red">Hello, World!</h1>
         <p>This is a sample PDF document created using html2pdf.js!</p>
     </div>
     <button id="download">Download PDF</button>
