--- a/crud_localstorage/index.html
+++ b/crud_localstorage/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FormDemo</title>
+    <title>Localstorage CRUD Demo</title>
     <!-- Latest compiled and minified CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -12,9 +12,9 @@
 <script src="index.js"></script>
 </head>
 <body onload="showData(JSON.parse(localStorage.getItem('arrayKey')))">
-<div class="container-fluid d-flex p-5">
+<div class="container-fluid d-md-flex p-5">
 
-<div class="col-6 py-3">
+<div class="col-12 col-md-6 py-3">
 
     <form id="formId" method="post" action="index.html">
         <div class="mb-3 mt-3">
@@ -74,8 +74,8 @@
 </div>
 
 
-<div class="col-6 py-4" id="mainTable">
-
+<div class="col-12 col-md-6 py-4 " id="mainTable">
+<div class="table table-responsive">
 <table  class="table table-hover table-responsive " id="thead">
     <thead>
         <tr>
@@ -93,7 +93,7 @@
       
     </tbody>
 </table>
-
+</div>
 
 </div>
 
